# telecraftor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/: README.md  bot_config.json  bot_keyboard_demo.py  command_bot.py  echo_bot.py  env.example.sh  group_bot.py  run.py  selftest_bot.py  test_new_features.py
apps/bot_plugins/: core.py  moderation.py  shared.py  stats.py  utilities.py  welcome.py
docs/: 00_overview.md  01_architecture.md  09_testing_strategy.md  10_v2_migration.md  11_live_runbook.md  12_sandbox_isolation.md  13_api_capability_map.md  14_userbot_guide.md  15_mtproto_bot_guide.md  16_group_bot_guide.md  17_support_policy.md  18_release_process.md  mvp.md  security.md
tests/: __init__.py  conftest.py  test_add_user_to_group.py  test_admin_actions.py  test_albums_folders.py  test_auth_handshake_crypto_helpers.py  test_auth_handshake_skeleton.py  test_auth_handshake_transport_quick_ack.py  test_auth_kdf.py  test_block_contacts_invites.py  test_bot_chat_action_event.py  test_bot_dispatcher_action_dedupe.py  test_bot_event_command.py  test_bot_filters.py  test_bot_reaction_counts.py  test_client_mtproto_wrapper.py  test_client_send_file_api.py  test_entity_cache_storage.py  test_forward_message.py  test_group_channel_methods.py  test_integration_manual.py  test_iter_dialogs_messages.py  test_media_download.py  test_member_transfer.py  test_msg_id.py  test_prime_archived_folder.py  test_reply_auto_prime.py  test_reply_to_msg.py  test_schema_pinned.py  test_session_file.py  test_srp.py  test_tl_codec_roundtrip.py  test_tl_flags_true_decode.py  test_tl_mtproto_specials.py  test_tl_parser_basic.py  test_transport_framing.py
tests/crypto/: test_aes_ige.py  test_rsa.py
tests/live/: README.md  __init__.py  _suite_shared.py  conftest.py  test_aggressive_suite.py  test_integration_manual.py
tests/meta/: test_v2_deprecation_policy.py  (+5 more)
tools/: fetch_schema.py  gen_tl.py  migrate_sessions_layout.py  parse_pinned_schema.py  pin_layer.py  release_check.py  smoke_auth_key.py  smoke_get_config.py  smoke_get_me.py  smoke_login.py  smoke_ping.py  smoke_updates.py  sync_v2_method_matrix.py
(+310 files in other folders)
